--- a/animationYouTube.html
+++ b/animationYouTube.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="YTStyle.css"/>
-    <title>Document</title>
+    <title>cambio con curso de vsc y git</title>
 </head>
 <body>
 
