--- a/animationYouTube.html
+++ b/animationYouTube.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <h3 id="logo">Dream Vacation</h3>
+            <h3 id="logo">Dream Vacations</h3>
             <img class="hamburger" src="menu.svg" alt="hamburger">
         </nav>
         <section>
